<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.shakiraquiz.MainActivity">

        <!--Welcome message -->
        <RelativeLayout
            android:id="@+id/welcome_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/shakira_pink"
                android:src="@drawable/shakira_pink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/welcome_message"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textColor="@color/GREEN0"/>

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome_text"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/enter_your_name"
                android:inputType="textCapWords"
                android:paddingTop="200dp"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textColor="@color/GREEN0"/>

            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:onClick="startQuiz"
                android:text="@string/start"
                android:background="@color/PINK3"/>

        </RelativeLayout>

        <!-- Questions -->
        <LinearLayout
            android:id="@+id/questions_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!--1. question -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/question_text_01"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radio1_q1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1_q1"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio2_q1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2_q1"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio3_q1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3_q1"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio4_q1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option4_q1"
                        android:textSize="18sp" />
                </RadioGroup>

            </LinearLayout>

            <!--2. question -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/question_text_02"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio1_q2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1_q2"
                        android:textSize="18sp" />


                    <RadioButton
                        android:id="@+id/radio2_q2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2_q2"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio3_q2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3_q2"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio4_q2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option4_q2"
                        android:textSize="18sp" />
                </RadioGroup>

            </LinearLayout>

            <!--3. question -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/question_text_03"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio1_q3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1_q3"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio2_q3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2_q3"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio3_q3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3_q3"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio4_q3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option4_q4"
                        android:textSize="18sp" />

                </RadioGroup>

            </LinearLayout>

            <!--4. question -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/question_text_04"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit1_q4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:hint="@string/name_of_band"
                    android:textSize="20sp" />
            </LinearLayout>

            <!--5. question -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/question_text_05"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox1_q5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1_q5"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox2_q5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2_q5"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox3_q5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3_q5"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox4_q5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option4_q5"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <!--6. question -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/question_text_06"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit1_q6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:hint="@string/year"
                    android:textSize="20sp" />

            </LinearLayout>

            <!--7. question -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/question_text_07"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio1_q7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1_q7"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio2_q7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2_q7"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio3_q7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3_q7"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio4_q7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option4_q7"
                        android:textSize="18sp" />

                </RadioGroup>
            </LinearLayout>

            <!-- Option Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/end_quiz_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="endQuiz"
                    android:text="@string/get_score"
                    android:background="@color/PINK3"/>

                <Button
                    android:id="@+id/back_to_welcome_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="backToWelcome"
                    android:text="@string/back_home"
                    android:background="@color/PINK3"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

